--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
-    "name": "tongdu99/user",
+    "name": "laravel-module/user-module",
     "type": "laravel-module",
-    "description": "Extract laravel user authentication into a laravel-module",
+    "description": "Basic authentication extracted from laravel 6",
     "license": "MIT",
     "authors": [
         {
