use github id as namespace for composer since laravel-module is taken. contacting the author.

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "laravel-module/user-module",
+    "name": "tongdu99/user-module",
     "type": "laravel-module",
     "description": "Basic authentication extracted from laravel 6",
     "license": "MIT",
